# saltx

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
.github/workflows/: simple.yml
ci/requirements/: py310.yml
data/meshes/: circle_with_pml.geo  circle_with_pml.msh  circle_with_pml0.h5  circle_with_pml0.xdmf  gen_2d_mesh.py  quadrant_with_pml.msh  quadrant_with_pml0.xdmf  quarter_circle_with_pml.geo  quarter_circle_with_pml0.h5  quarter_circle_with_pml0.xdmf
data/references/esterhazy_fig7/: mode1.csv  mode2.csv
src/saltx/: algorithms.py  assemble.py  jacobian.py  lasing.py  log.py  mesh.py  newtils.py  nonlasing.py  plot.py  pml.py  trace.py
src/saltx/tests/: test_jacobian.py  test_lasing.py
src/saltx/tests/reference/: conftest.py  ep_mode1.csv  ep_mode2.csv  esterhazy_ep_fig6_blue.csv  esterhazy_ep_fig6_blue_zoomed.csv  esterhazy_ep_fig6_red.csv  esterhazy_ep_fig6_red_zoomed.csv  ref_data_esterhazy_fig5.py  ref_data_mohammed.py  solid-and-open-blue.csv  solid-and-open-red.csv  test_2d_disk.py  test_esterhazy_2014_fig2.py  test_esterhazy_2014_fig3.py  test_esterhazy_2014_fig4.py  test_esterhazy_2014_fig5.py  test_esterhazy_2014_fig5_fig6.py  test_esterhazy_2014_fig7.py  test_esterhazy_fig7.py  test_generalizations_2010.py  test_mohammed_2022_fig1.py  test_mohammed_2022_figs1_figs2.py  test_mohammed_2022_figs2.py
