[project]
name = "saltx"
version = "0.1.0"
authors = [
  { name="Thomas Wimmer", email="thomaswimmer@posteo.com" },
]
description = "An efficient FEM based laser mode solver"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/twmr/saltx"
"Bug Tracker" = "https://github.com/twmr/saltx/issues"

[tool.pytest.ini_options]
addopts = '''
    --verbose
    -rs
    --color=yes
    --log-level=DEBUG
    --log-format="%(asctime)s.%(msecs)03d %(name)15.15s %(levelname)-7s %(message)s"
    --log-date-format="%H:%M:%S"
    --durations=100
'''

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # pyupgrade
    "UP",
    # isort
    "I001",
    "RET",
    # flake8 pytest
    "PT",
    "PERF",
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["saltx"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
saltx = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
fenics-dolfinx = "0.7.3.*"
pytest = ">=8.1.1,<8.2"
matplotlib = ">=3.9.1,<4"
pandas = ">=2.2.2,<3"
scipy = ">=1.14.0,<2"
petsc = { version = "==3.20.6", build = "complex_*" }
python = "3.12.*"
ipython = ">=8.26.0,<9"
ruff = ">=0.5.5,<0.6"
